Modernize BeanShell class manager caches